Fix background on mobile
Background on mobile is not one image rather tiled images, apply
responsive fix via container

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,17 @@
-html {
-  background: url("../images/15thfloorColor.jpg");
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("../images/15thfloorColor.jpg") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-size: cover;
 }
 body {
   font-family: Helvetica;
